{
    "name": "PlayerContolls",
    "maps": [
        {
            "name": "Player",
            "id": "ba927efc-a123-439d-9029-776d36a9710d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "6059058a-fead-47a2-a9e6-62f454a78540",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "PassThrough",
                    "id": "26b3de9e-306d-43d7-8bdc-6ced87bbb2be",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Draw",
                    "type": "Button",
                    "id": "3d749587-dc43-4770-9ac4-ae35c84792e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "slowMoation",
                    "type": "Button",
                    "id": "829bc2aa-5cbf-4967-8b22-e02165475bdb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "attack1",
                    "type": "Button",
                    "id": "d380ae3d-b596-4c75-b180-5400d347059c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "attack2",
                    "type": "Button",
                    "id": "da707c48-4e86-4921-b981-0c9a09839c59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "attack3",
                    "type": "Button",
                    "id": "0b7f2031-1c3c-4521-a25a-a5f06b688e9d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "dica",
                    "type": "Button",
                    "id": "46f1916a-ba83-4fd0-80e6-af2db5c6e6db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "dash",
                    "type": "Button",
                    "id": "d71f4c20-d3f7-421a-8c60-3d2df458f78f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "targetLock",
                    "type": "Button",
                    "id": "7141a25f-36c3-4346-9535-0e6b05df507d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "changeTarget",
                    "type": "Button",
                    "id": "31a67b3b-d956-409b-81e2-e78f33a0e962",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "d5ff1230-df47-44fc-8286-6d90da3bcda2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "30ea29e7-1202-474c-8083-c2bf42a5b47a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "06d16fc9-8782-416f-b55f-4df40d38a112",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c80dfab1-a10b-4750-8a41-579a31fb0367",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "28deaf1b-ba6b-4e81-a3d5-e7c1e16cf75d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b271e251-fe5d-481a-a59c-51d45ba1fecf",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43ed89a9-dcd7-42c1-85a0-aec48251161e",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Draw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60995720-5da9-49c8-86cf-d19c657f58d5",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "slowMoation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63a05dcc-b8b2-458d-8f6e-6fca643fe446",
                    "path": "<Keyboard>/1",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "attack1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ec902cc-0621-4180-9fbd-b5a23fafde7c",
                    "path": "<Keyboard>/2",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "attack2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea048066-1f17-4391-813b-0fd8a1f1c531",
                    "path": "<Keyboard>/3",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "attack3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66e266c4-eb43-45ac-8e8d-2a3a2c52ba9f",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "dica",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60435472-ce9a-49f7-bb17-f7ac125f3ab4",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ddc72f8-a5df-47a2-b9c7-7cf276e61a2f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "targetLock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34b3d8e2-ff3d-479c-b689-4b039f7c815f",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "changeTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}